--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                   ">
                 <p>울산 북구 진장유통로 35</p>
                 <p style="font-weight: 600; color: #000000">
-                  JW컨벤션 그랜드볼
+                  JW컨벤션 그랜드볼룸
                 </p>
               </div>
               <div class="weddinghall-call-info">
